Revert "docs: fix column widths shifting during DataTable search"
This reverts commit eab2440318b58d718e104bd9698db2d91fe756db.

--- a/.docs/.sphinx/_static/project_specific.css
+++ b/.docs/.sphinx/_static/project_specific.css
@@ -8,13 +8,6 @@
 }
 
 /**
- * Prevent DataTables from recalculating column widths when search filters rows.
- */
-table.sphinx-datatable {
-  table-layout: fixed;
-}
-
-/**
  * Show emoji-tooltip as floating text when hovering over emoji-div.
  *
  * These classes are used in `non-relation-libs-table.rst`.
